# KTAB

./: .gitignore  .travis.yml  KTAB_SMP_Tables.md  KTAB_Test_Apps.sh  KTAB_Test_Apps_Travis.sh  LICENSE  README.md  _config.yml  appveyor.yml  build.sh  buildKTAB.sh  changes.txt  clean.sh  cleanKTAB.sh  distCleanKTAB.sh  index.html  install-linux-deps.sh  install-osx-deps.sh  install.sh  params.json  reconfig.sh  whatsnew.md
KTAB/: Doxyfile  Doxyfile~  buildKTAB.sh  cleanKTAB.sh  distCleanKTAB.sh  installKTAB.sh  reconfigKTAB.sh
KTAB/kgraph/: CMakeLists.txt  README.md  README.txt  TODO.txt
KTAB/kgraph/fluid/: qmUI.fl  tetrisUI.fl
KTAB/kgraph/libsrc/: kgraph.cpp  kgraph.h
KTAB/kgraph/src/: board.cpp  board.h  pvcanvas.cpp  pvcanvas.h  qcanvas.cpp  qcanvas.h  qmmain.cpp  qmmain.h  qmutils.cpp  qmutils.h  shape.cpp  shape.h  tcanvas.cpp  tcanvas.h  tmain.cpp  tmain.h  tutils.h
KTAB/kutils/: 20170530_ref-demoutils.txt  CMakeLists.txt  README.md  README.txt  kutils-logger.conf
KTAB/kutils/doc/: 2015-02-20-examples-of-4D-Nash-bargaining.txt  zeta-curves.ods
KTAB/kutils/libsrc/: gaopt.cpp  gaopt.h  hcsearch.cpp  hcsearch.h  kmatrix.cpp  kmatrix.h  kutils.cpp  kutils.h  prng.cpp  prng.h  vimcp.cpp  vimcp.h
KTAB/kutils/src/: demo.cpp  demo.h  sqlitedemo.cpp  sqlitedummy.cpp
KTAB_web/: about.html  events.html  papers.html  research.html  software.html
cmakemodules/: Findefence.cmake  Findkmodel.cmake  Findkutils.cmake  Findsqlite.cmake
csv-parser/: README.txt  csv_parser.cpp  csv_parser.hpp
easyloggingpp/: CMakeLists.txt  compiling_elpp.md
examples/: README.md  buildEX.sh  cleanEX.sh  distCleanEX.sh  installEX.sh  reconfigEX.sh
examples/agenda/: 20170530_ref-agdemo.txt  CMakeLists.txt  README.txt  agenda-logger.conf  test-bnry-fblnc.txt  test-bnry-free.txt  test-bnry-mblnc.txt  test-prop-fblnc.txt  test-prop-free.txt  test-prop-mblnc.txt
examples/agenda/libsrc/: agenda.cpp  agenda.h
examples/agenda/src/: demo.cpp  demo.h
examples/comsel/: 20170530_ref-csg.txt  CMakeLists.txt  comsel-logger.conf
examples/comsel/fluid/: csmain.fl
examples/comsel/libsrc/: comsel.cpp  comsel.h
examples/comsel/src/: democomsel.cpp  democomsel.h
examples/minwater/: CMakeLists.txt  Doxyfile  minwater-logger.conf
examples/minwater/data/: 2015-10-24.tgz  2015-10-25.tgz
examples/minwater/data/2015-10-25/: 2015-10-25-prob-sens.xlsx  2015-10-25-run-80-50.txt
examples/minwater/src/: 2015-10-24-merged-cost.h  2015-10-24-merged-port.h  2015-10-24-merged-prod.h  2015-10-24-merged-scen.h  minwater.cpp  minwater.h
examples/minwater/wmdox/rtf/: dir_161919a3c401f1b7af5ca464a59b29d0.rtf  dir_a794d95c650be089ff56df8250b2ce3e.rtf  refman.rtf
examples/pmatrix/: 20170530_ref-pmdemo.txt  CMakeLists.txt  pmatrix-logger.conf
examples/pmatrix/doc/: dummyPMat.xlsx
examples/pmatrix/libsrc/: pmatcsv.cpp  pmatcsv.h  pmatrix.cpp  pmatrix.h
examples/pmatrix/src/: pmdemo.cpp  pmdemo.h
examples/reformpri/: 20170530_ref-rpdemo.txt  CMakeLists.txt  Doxyfile  README.md  README.txt  rpdemo-logger.conf
examples/reformpri/doc/: README.md  reformpri-ex01.xml  reformpri.xsd
examples/reformpri/grpdox/rtf/: dir_3bdd366c61c312c028aa5c13956d6734.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  refman.rtf
examples/reformpri/libsrc/: rplib.cpp  rplib.h  rplib2.cpp  rplib2.h
examples/reformpri/rp-ref-runs/: ref-run-rp-reformpri-scen2-0-avrg.txt  ref-run-rp-reformpri-scen2-1-avrg.txt  ref-run-rp-reformpri-scen2-2-avrg.txt  ref-run-rp-reformpri-scen2-3-avrg.txt  ref-run-rp-reformpri-scen3-0-top4.txt  ref-run-rp-reformpri-scen3-1-top4.txt  ref-run-rp-reformpri-scen3-2-top4.txt  ref-run-rp-reformpri-scen3-3-top4.txt  reference-runs.sh
examples/reformpri/src/: reformpriorities.cpp  reformpriorities.h
examples/smp/: CMakeLists.txt  README-VS.txt  README.md  README.txt  SMPC_RefRuns_Compare.sh  SMPQ  SMP_VIZ.html  ktab-smp-logger.conf  pySMP.py  smpc-logger.conf
examples/smp/SASQ/: actorwindow.cpp  actorwindow.h  csv.cpp  csv.h  main.cpp  mainwindow.cpp  mainwindow.h  modelwindow.cpp  modelwindow.h  runmodel.cpp  runmodel.h  sasqwindow.qrc  specswindow.cpp  specswindow.h  xmlparser.cpp  xmlparser.h
examples/smp/SMPQ/: bargraph.cpp  colorpickerdialog.cpp  colorpickerdialog.h  csv.cpp  csv.h  customgraph.cpp  database.cpp  database.h  databasedialog.cpp  databasedialog.h  databasedialog.ui  dockwidgets.qrc  linegraph.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  popupwidget.cpp  popupwidget.h  popupwidget.ui  quadmap.cpp  runsmp.cpp  xmlparser.cpp  xmlparser.h  xmlwidget.cpp
examples/smp/SMPV/: index.html
examples/smp/SMPV/pages/: graphs.html  index.html
examples/smp/doc/: 2016-11-11-ref-SOE-Pol-Comp.txt  2016-11-11-ref-dummyData_3Dim.txt  2016-11-29-ref-smpExample.txt  2016-12-07-ref-SOE-Pol-Comp.txt  2016-12-07-ref-dummyData_3Dim.txt  2016-12-07-ref-smpExample.txt  20170111_ref-SOE-Pol-Comp.txt  20170111_ref-dummyData_3Dim.txt  20170111_ref-smpExample.txt  20170201_ref-SOE-Pol-Comp.txt  20170201_ref-dummyData_3Dim.txt  20170201_ref-smpExample.txt  20170226_ref-SOE-Pol-Comp.txt  20170226_ref-dummyData_3Dim.txt  20170226_ref-smpExample.txt  20170530_ref-SOE-Pol-Comp.txt  20170530_ref-dummyData_3Dim.txt  20170530_ref-smpExample.txt  Pragmatic-Affinity-in-KTAB.tex  SOE-Competitive.csv  SOE-Competitive.csv_effPow.csv  SOE-Competitive.csv_posLog.csv  SOE-Pol-Comp.csv  SOE-Policy.csv  SOE-Policy.csv_effPow.csv  SOE-Policy.csv_posLog.csv  dummyData-a040.csv  dummyData-a080.csv  dummyData-a160.csv  dummyData_3Dim-no-final-comma.csv  dummyData_3Dim.csv  dummyData_3Dim.xml  dummyData_6Dim.csv  example.xml  smp.xsd  smpExample.xml  smpSchema.xsd
examples/smp/fluid/: mainw.fl
examples/smp/libsrc/: smp.cpp  smp.h  smpbcn.cpp  smpread.cpp  smpsql.cpp
examples/smp/mc-smpc-runs/: monte-carlo-runs.sh
examples/smp/src/: demosmp.cpp  demosmp.h  guimain.cpp
examples/smp/tutorial/: SMPTutorial.html  SMPTutorial.md
kmodel/: README.txt
kutils/: CMakeLists.txt  README.txt
libsrc/: README.txt.txt
minicsv/: example.cpp  minicsv.h
qcustomplot/: qcustomplot.cpp  qcustomplot.h  spline.h
(+237 files in other folders)
